# rustyc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: ast.rs  code_generator.rs  lexer.rs  main.rs  parser.rs  symbol_table.rs  test_utils.rs  tokens.rs  x86_generator.rs
src/code_generation/: code_generator.rs  mod.rs  symbol_table.rs  x86_generator.rs
src/code_generation/llvm/: generator.rs  symbol_table.rs
src/code_generation/x86/: generator.rs  mod.rs
src/lexical_analysis/: lexer.rs
src/syntax_analysis/: ast.rs  parser.rs
src/tests/: assignment.c  do_while.c  for.c  function_calls.c  if.c  implicit_cast.c  operators.c  variables.c  variables_error.c  while.c
src/utils/: compilation.rs  mod.rs  test_utils.rs
